tests/baselines/reference/parserES5ForOfStatement11.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement11.ts(1,1): error TS2482: For-of statements are only available when targeting ECMAScript 6 or higher
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement11.ts(1,6): error TS1154: 'const' declarations are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement11.ts (2 errors) ====
    for (const [a, b] of X) {
    ~~~
!!! error TS2482: For-of statements are only available when targeting ECMAScript 6 or higher
         ~~~~~
!!! error TS1154: 'const' declarations are only available when targeting ECMAScript 6 and higher.
    }